fixed body overflow scrolling

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -35,7 +35,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
   margin: 0;
-  
+}
+
+#wrapper {
+  max-height: 100vh;
   display: flex;
 }
 
@@ -48,6 +51,8 @@ body {
   display: flex;
   flex-direction: column;
   row-gap: 1.5rem;
+
+  overflow-y:auto;
 
   padding: 1rem;
 }
@@ -193,7 +198,7 @@ h3 {
   gap: 1rem;
 
   padding: 1rem 0.7rem;
-  background-color: #eee;
+  background-color: #fff;
 
   border-radius: .5rem;
 
